feat: add search and sort filters to task listing endpoint with JPQL query
Replace in-memory stream filtering with a single JPQL query that supports
status, priority, assigneeId, text search (title/description), and
configurable sorting with a field whitelist.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>